[gd_scene load_steps=8 format=3 uid="uid://dt4m5posjkuw4"]

[ext_resource type="Texture2D" uid="uid://v5omew4llxgs" path="res://addons/gopilot_utils/textures/Play.png" id="1_0oqn1"]
[ext_resource type="Script" path="res://addons/gopilot_utils/scripts/prompt_field.gd" id="1_5ii6h"]
[ext_resource type="Texture2D" uid="uid://cl3ikvuviln72" path="res://addons/gopilot_utils/textures/Script.png" id="1_jshr1"]
[ext_resource type="Script" path="res://addons/gopilot_utils/scripts/drag_data_control.gd" id="2_yckbp"]
[ext_resource type="Script" path="res://addons/gopilot_utils/scripts/status_indicator.gd" id="3_jpp4m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yijdr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wjq7v"]

[node name="PromptField" type="VBoxContainer"]
offset_right = 437.0
offset_bottom = 70.0
script = ExtResource("1_5ii6h")
send_button_keyboard_shortcuts = PackedStringArray("Ctrl+Enter")

[node name="SuggestionsCon" type="ScrollContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="Suggestions" type="HBoxContainer" parent="SuggestionsCon"]
unique_name_in_owner = true
layout_mode = 2

[node name="SuggestionSample" type="Button" parent="SuggestionsCon" node_paths=PackedStringArray("parent_node")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Example prompt"
icon = ExtResource("1_jshr1")
flat = true
script = ExtResource("2_yckbp")
parent_node = NodePath("../..")
can_drop_data_function = ""
drop_data_function = ""
get_drag_data_function = "suggestion_get_drag_data"

[node name="PromptField" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="PromptField" node_paths=PackedStringArray("parent_node")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Ask anything..."
script = ExtResource("2_yckbp")
parent_node = NodePath("../..")
get_drag_data_function = ""

[node name="TextEdit" type="TextEdit" parent="PromptField" node_paths=PackedStringArray("parent_node")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Ask anything..."
wrap_mode = 1
script = ExtResource("2_yckbp")
parent_node = NodePath("../..")
get_drag_data_function = ""

[node name="CodeEdit" type="CodeEdit" parent="PromptField" node_paths=PackedStringArray("parent_node")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Ask anything..."
wrap_mode = 1
script = ExtResource("2_yckbp")
parent_node = NodePath("../..")
get_drag_data_function = ""

[node name="VBoxContainer" type="VBoxContainer" parent="PromptField"]
layout_mode = 2

[node name="SendBtn" type="Button" parent="PromptField/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Send a message to a model"
disabled = true
text = "SEND"
icon = ExtResource("1_0oqn1")

[node name="ToolButtons" type="HFlowContainer" parent="PromptField/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 2

[node name="StatusIndicator" type="RichTextLabel" parent="PromptField/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_yijdr")
bbcode_enabled = true
text = "Idle"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
script = ExtResource("3_jpp4m")

[node name="Control" type="Control" parent="PromptField"]
visible = false
layout_mode = 2

[node name="NoText" type="LineEdit" parent="PromptField/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 68.5625
offset_bottom = 31.0
placeholder_text = "Ask anything..."

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PromptDragWidget" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_right = 187.0
offset_bottom = 23.0
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_wjq7v")
text = "Prompt:
"
fit_content = true
autowrap_mode = 2

[connection signal="gui_input" from="PromptField/LineEdit" to="." method="_on_text_gui_input"]
[connection signal="gui_input" from="PromptField/TextEdit" to="." method="_on_text_gui_input"]
[connection signal="text_changed" from="PromptField/TextEdit" to="." method="_on_text_changed"]
[connection signal="gui_input" from="PromptField/CodeEdit" to="." method="_on_text_gui_input"]
[connection signal="text_changed" from="PromptField/CodeEdit" to="." method="_on_text_changed"]
[connection signal="pressed" from="PromptField/VBoxContainer/SendBtn" to="." method="_on_send_btn_pressed"]
